# bjourne-py

./: LICENSE  README.md  pyproject.toml
learning/: mnist.py
