# Copyright (C) 2026 Björn A. Lindqvist <bjourne@gmail.com>
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python3-libs"
version = "0.0.1"
description = "My Python libraries"
authors = [
    {name = "Björn A. Lindqvist"}
]
classifiers = [
    "Programming Language :: Python",
    "Operating System :: OS Independent"
]
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
homepage = "https://github.com/bjourne/python3-libs"

[project.optional-dependencies]
test = [
    "numpy",
    "pytest>=5.0.0"
]

[tool.pylint.format]
max-line-length = 80
